Fri Feb 13 20:59:48 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (extract_ipv6_pktinfo): set sa_len for 4.4BSD.

Fri Feb 13 15:34:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (simple_default_value): removed.  default values of optional
	  parameters are not available still now.  [ruby-dev:37980]

Fri Feb 13 15:11:11 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (eval_string_with_cref): use rb_vm_get_ruby_level_next_cfp() 
	  instead of vm_get_ruby_level_caller_cfp().  checking a upper frame
	  is not enough.  [ruby-dev:37984]

	* proc.c, vm_core.h: declare rb_vm_get_ruby_level_next_cfp()
	  on vm_core.h.

Fri Feb 13 15:01:40 2009  Koichi Sasada  <ko1@atdot.net>

	* cont.c (rb_fiber_alive_p): fix to return true instead of 0.
	  [ruby-dev:37991]

	* test/ruby/test_fiber.rb: add a test for Fiber#alive?

Fri Feb 13 09:43:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_func_flock): using flock defined in
	  win32/win32.c on mingw.

Fri Feb 13 01:45:17 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_set_sequence, compile_dstr_fragments),
	  (iseq_compile_each): hides other internal objects.

	* compile.c (iseq_compile_each): just freeze xstr.

Fri Feb 13 00:48:42 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def (defineclass): try to autoload const to be overridden.

Thu Feb 12 23:22:29 2009  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_socket.rb (test_udp_server): filter out unreachable
	  addresses.  [ruby-dev:37970]

Thu Feb 12 22:51:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (hide_obj): OBJ_FREEZE() is not an expression.  a patch
	  from nagachika <nagachika00 AT gmail.com> at [ruby-dev:37977].

	* compile.c (insn_set_sc_state): fixed typoe.

Thu Feb 12 12:36:35 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/basicsocket.c (bsock_getpeereid): implemented for Solaris
	  using getpeerucred.

	* ext/socket/extconf.rb: check ucred.h and getpeerucred.
